# tiny_ktx

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
include/tiny_ktx/: tinyktx.h  tinyktx2.h
src/: tinyktx.c
tests/: runner.cpp  test_tinyktx.cpp  test_tinyktx_tinyimageformat.cpp
